Fix spacing

--- a/css/stylesan.css
+++ b/css/stylesan.css
@@ -3,24 +3,21 @@
   font-style: italic;
   font-family: 'Cormorant Garamond', serif;
   font-size: 30px;
-  color: white;
+  color: white);
   background-image: url('../images/naming.jpg');
-  background-size:cover;
-  /* padding: 10rem 9rem; */
-  /* margin-bottom:2rem; */
-  /* font-weight:bold; */
+  background-size: cover;
 }
 .blockquote-reverse {
-  text-align:right;
+  text-align: right;
   margin-bottom: -40px;
 }
 body{
   background-color: rgb(243, 242, 240);
   font-family: 'Playfair Display', serif;;
 }
-img{
-  float:left;
-  margin-bottom: 2rem;
+.calc{
+  border: 1px solid rgb(191, 198, 207);
+  background-color: rgb(189, 209, 212);
 }
 h1{
   text-align: center;
@@ -36,7 +33,7 @@ h1{
   margin-top: 10px;
  }
  .card {
-  float:left;
+  float: left;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -47,21 +44,19 @@ h1{
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-  margin-left:30px;
+  margin-left: 30px;
 }
 
  h2{
-   margin-top:20px;
+   margin-top: 20px;
    text-align: center;
  }
  form{
-   padding:20px;
-   border:1px solid black;
-   background-color:rgb(188, 188, 189);
-   /* width:400px; */
-   /* margin-top:-25px; */
+   padding: 20px;
+   border: 1px solid black;
+   background-color: rgb(188, 188, 189);
  }
 textarea{
-  width=100%;
+  width= 100%;
  
 }
